[package]
name = "discord_game_sdk_mock"
version = "0.1.0"
authors = ["ldesgoui <ldesgoui@gmail.com>"]
edition = "2018"
description = "Mock library of the Discord Game SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ldesgoui/discord_game_sdk"
keywords = ["discord", "sdk", "gamedev"]
categories = ["development-tools::testing", "development-tools::ffi"]

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
log = "0.4.6"
memoffset = "0.3.0"
env_logger = "0.6.1"
scopeguard = "1.0.0"
discord_game_sdk_sys = { version = "0.1.0", path = "../sys", features = ["mock"] }
