[package]
name = "discord_game_sdk_mock"
version = "0.2.3"
authors = ["ldesgoui <ldesgoui@gmail.com>"]
edition = "2018"
description = "Mock library of the Discord Game SDK"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ldesgoui/discord_game_sdk"
keywords = ["discord", "sdk", "gamedev"]
categories = ["development-tools::testing", "development-tools::ffi"]

[package.metadata.docs.rs]
features = ["discord_game_sdk_sys/doc"]

[dependencies]
log = "0.4.6"
memoffset = "0.3.0"
pretty_env_logger = "0.3.0"
scopeguard = "1.0.0"

[dependencies.discord_game_sdk_sys]
version = "0.2.0"
path = "../sys"
features = ["mock"]

