[package]
name = "discord_game_sdk_sys"
version = "0.4.0"
authors = ["ldesgoui <ldesgoui@gmail.com>"]
edition = "2018"
description = "Low-level bindings for the Discord Game SDK"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ldesgoui/discord_game_sdk"
keywords = ["discord", "sdk", "gamedev"]
categories = ["external-ffi-bindings", "game-engines"]
readme = "README.md"

[package.metadata.docs.rs]
features = ["doc"]

[features]
doc = [] # DO NOT RELY ON THIS
link = []

[build-dependencies]
bindgen = "0.52"
