[package]
name = "discord_game_sdk_sys"
version = "1.0.0-rc.1" # check sys/src/lib.rs
authors = ["ldesgoui <ldesgoui@gmail.com>"]
edition = "2018"
description = "Low-level bindings for the Discord Game SDK"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/ldesgoui/discord_game_sdk"
keywords = ["discord", "sdk", "gamedev"]
categories = ["external-ffi-bindings", "game-engines"]
readme = "README.md"
build = "build.rs"

[package.metadata.docs.rs]
features = ["doc"]

[features]
doc = [] # DO NOT RELY ON THIS
link = []

[build-dependencies]
bindgen = { version = "0.53.0", default-features = false, features = ["runtime"] }
